Added list.add() to support adding elements at given index into a list